mysql/ingress-mysql.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-service-ingress
  namespace: seeds-uat 
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: mysql-service.seedslabs.io
    http:
      paths:
      - backend:
          service:
            name: mysql-service
            port:
              number: 3306
        path: /
        pathType: Prefix
